feat: add metadata provider trait, tvdb provider and show metadata routes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ librqbit = "7.0.1"
 librqbit-core = "4.0.1"
 tokio = { version = "1", features = ["full"] }
 async-stream = "0.3.6"
-tokio-util = "0.7.12"
+tokio-util = { version = "0.7.12", features = ["compat"] }
 actix-files = "0.6.6"
 futures = "0.3.31"
 regex = "1.11.1"
@@ -35,3 +35,7 @@ tracing-opentelemetry = "0.27.0"
 mime_guess = "2.0.5"
 urlencoding = "2.1.3"
 itertools = "0.13.0"
+chrono = "0.4.38"
+reqwest = "0.12.9"
+async-trait = "0.1.83"
+tvdb4 = "0.1.0"
