--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,5 @@ mime_guess = "2.0.5"
 urlencoding = "2.1.3"
 itertools = "0.13.0"
 chrono = "0.4.38"
-reqwest = "0.12.9"
+reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
 async-trait = "0.1.83"
-tvdb4 = "0.1.0"
